src/test/deca/syntax/invalid/classe_mauvaise_extends.deca
// Description:
//    on déclare une classe avec un mauvais extends 
//
// Resultats:
//   

class A extends "oui"{
}